--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -26,6 +26,7 @@ gem "stimulus-rails"
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 gem "jbuilder"
 
+gem 'bcrypt',                     '3.1.13'
 gem 'bootstrap-sass',             '3.4.1'
 # gem "sassc-rails"
 # gem "sassc", "< 2.2.0"
