--- a/sample_app/config/database.yml
+++ b/sample_app/config/database.yml
@@ -21,5 +21,13 @@ test:
   database: storage/test.sqlite3
 
 production:
-  <<: *default
-  database: storage/production.sqlite3
+  # <<: *default
+  # database: storage/production.sqlite3
+  adapter: postgersql
+  encoding: unicode
+  # For details on configuration pooling, see Rails cofiguration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: sample_app_production
+  username: sample_app
+  password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
