--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -76,3 +76,6 @@ group :test do
 end
 
 gem 'cssbundling-rails'
+gem 'faker',                      '2.11.0'
+gem 'will_paginate',              '3.3.0'
+gem 'bootstrap-will_paginate',    '1.0.0'
