--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -29,6 +29,7 @@ gem "jbuilder"
 
 gem 'bcrypt',                     '3.1.13'
 gem 'bootstrap-sass',             '3.4.1'
+# gem 'bootstrap', '~> 5.3.2'
 # gem "sassc-rails"
 # gem "sassc", "< 2.2.0"
 
@@ -79,3 +80,4 @@ gem 'cssbundling-rails'
 gem 'faker',                      '2.11.0'
 gem 'will_paginate',              '3.3.0'
 gem 'bootstrap-will_paginate',    '1.0.0'
+# gem 'bootstrap', '~>5.2.0'
