Doctor and patient sign up

--- a/JaipurCityHospital/test/fixtures/users.yml
+++ b/JaipurCityHospital/test/fixtures/users.yml
@@ -9,3 +9,12 @@ one: {}
 #
 two: {}
 # column: value
+
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
+archer:
+name: Sterling Archer
+email: duchess@example.gov
+password_digest: <%= User.digest('password') %>
