--- a/JaipurCityHospital/Gemfile
+++ b/JaipurCityHospital/Gemfile
@@ -53,3 +53,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem "devise", "~> 4.9"
 gem 'bootstrap-sass',             '3.4.1'
+gem 'will_paginate',              '3.3.0'
+gem 'bootstrap-will_paginate',    '1.0.0'
