--- a/JaipurCityHospital/Gemfile
+++ b/JaipurCityHospital/Gemfile
@@ -23,6 +23,7 @@ gem 'jbuilder', '~> 2.7'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
+gem 'jquery-rails'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -55,3 +56,4 @@ gem "devise", "~> 4.9"
 gem 'bootstrap-sass',             '3.4.1'
 gem 'will_paginate',              '3.3.0'
 gem 'bootstrap-will_paginate',    '1.0.0'
+gem 'faker',                      '2.11.0'
